--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,8 @@
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_link_tag "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" %>
-  </head>
+  	<%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+	</head>
 
   <body>
   	<% if flash[:notice] %>
@@ -37,6 +38,9 @@
               <p class="control">
                 <%= link_to 'New Tweeet', root_path, class: "button is-info is-inverted" %>
               </p>
+							<p class="control">
+              	<%= link_to 'Sign Up', new_user_registration_path, class: "button is-info" %>
+            	</p>
             </div>
 					</div>
 				</div>
