--- a/app/views/tweeets/_feed.html.erb
+++ b/app/views/tweeets/_feed.html.erb
@@ -20,9 +20,9 @@
       </div>
       <div class="media-content">
         <div class="content">
-          <strong>Matt Noakes</strong>
-          <small>@myhandle</small>
-          <p><%= tweeet.tweeet %></p>
+          <strong><%= tweeet.user.name %></strong><br />
+  				<small><%= tweeet.user.username %></small><br/>
+  				<p><%= tweeet.tweeet %></p>
         </div>
         <nav class="level">
           <div class="level-left is-mobile">
